# sari-genai

./: Cargo.toml  README.md
src/: main.rs
