[package]
name = "bedrock_dynamodb_genai"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.49.0"
aws-sdk-dynamodb = "1.45.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "v8"] }
